Add some styling

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="description" content="Best tenderloin east of the Mississippi">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css_reset.css">
+    <!-- <link rel="stylesheet" href="css_reset.css"> -->
+    <link rel="stylesheet" href="style.css">
 
     <!-- JS -->
-    <script src="external_javascript_example.js" charset="utf-8" defer></script>
+    <!-- <script src="external_javascript_example.js" charset="utf-8" defer></script> -->
 
     <!-- Page -->
     <title>Andrew's Recipe</title>
