Fix missing JS reference

--- a/interactive-animation.html
+++ b/interactive-animation.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" href="animation.css">
+    <link rel="stylesheet" href="interactive-animation.css">
     <title>Canvas Practice</title>
   </head>
 
@@ -17,7 +17,7 @@
         <label><input id="cb7" type="checkbox" value="7">7</label><br>
         <label><input id="cb8" type="checkbox" value="8">8</label><br>
         <label><input id="cb9" type="checkbox" value="9">9</label><br>
-        <label><input id="cb10" type="checkbox" value="10">10</label><br>
+        <label><input id="cb10" type="checkbox" value="10" checked>10</label><br>
         <label><input id="cb11" type="checkbox" value="11">11</label><br>
         <label><input id="cb12" type="checkbox" value="12">12</label><br>
         <label><input id="cb13" type="checkbox" value="13">13</label><br>
@@ -26,6 +26,6 @@
         <label><input id="cb16" type="checkbox" value="16">16</label><br>
       </form>
       </section>
-    <script type="application/javascript" src="animation.js"></script>
+    <script type="application/javascript" src="interactive-animation.js"></script>
   </body>
 </html>
